Penambahan materi dasar Minggu-1

--- a/M1/M1H1-Pengenalan Python dan Instalasi.ipynb
+++ b/M1/M1H1-Pengenalan Python dan Instalasi.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hari 1: Pengenalan Python dan Instalasi\n"
+    "# Hari 1: Pengenalan Python dan Instalasi\n",
+    "---\n"
    ]
   },
   {
@@ -199,4 +200,3 @@
  "nbformat": 4,
  "nbformat_minor": 4
 }
-
