Penambahan materi dasar Minggu-1

--- a/M1/M1H2-Menentukan Keputusan dan Pengendalian Arah Program.ipynb
+++ b/M1/M1H2-Menentukan Keputusan dan Pengendalian Arah Program.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hari 2: Control Flow in Python\n",
+    "# Hari 2: Keputusan dan Kontrol Arah Program\n",
     "---\n"
    ]
   },
@@ -50,9 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iterasi ke- 0\n",
+      "Iterasi ke- 1\n",
+      "Iterasi ke- 2\n",
+      "Iterasi ke- 3\n",
+      "Iterasi ke- 4\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5):\n",
     "    print(\"Iterasi ke-\", i)"
@@ -89,9 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(10):\n",
     "    if i == 5:\n",
@@ -101,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
