Penambahan materi dasar Minggu-1

--- a/M1/M1H4-Struktur Data.ipynb
+++ b/M1/M1H4-Struktur Data.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "angka = (1, 2, 3, 4, 5)\n",
+    "angka = (1, 2, 3, 4, 5) # perhatikan tanda kurungnya yang membedakan dengan jenis daftar List diatas\n",
     "print(angka)\n",
     "print(angka[1])  # Mengakses elemen kedua"
    ]
@@ -54,7 +54,7 @@
    "metadata": {},
    "source": [
     "## 3. Dictionary\n",
-    "Dictionary menyimpan data dalam pasangan key-value."
+    "Dictionary menyimpan data dalam pasangan key-value. Digunakan untuk membuat daftar dengan _key_ (kunci sebagai referensi) yang unik untuk mewakili _value_ (data)"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_mahasiswa = {'nama': 'Budi', 'usia': 20, 'jurusan': 'Informatika'}\n",
+    "data_mahasiswa = {'nama': 'Budi', 'usia': 20, 'jurusan': 'Informatika'} # definisi key-value  berpasangan dan beriringan\n",
     "print(data_mahasiswa)\n",
     "print(data_mahasiswa['nama'])  # Mengakses nilai dengan kunci\n",
     "data_mahasiswa['usia'] = 21  # Mengubah nilai\n",
