Penambahan materi dasar Minggu-1

--- a/M1/M1H3-Fungsi Dan Modul.ipynb
+++ b/M1/M1H3-Fungsi Dan Modul.ipynb
@@ -168,7 +168,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 7. Penerapan Prinsip DRY & KISS\n",
+    "- **DRY (Don't Repeat Yourself)**: Gunakan fungsi untuk menghindari pengulangan kode.\n",
+    "  ```python\n",
+    "  def sapa(nama):\n",
+    "      return f'Halo, {nama}! Selamat belajar Python.'\n",
+    "  print(sapa('Budi'))\n",
+    "  print(sapa('Ani'))\n",
+    "  ```\n",
+    "- **KISS (Keep It Simple, Stupid)**: Gunakan sintaks yang sederhana dan mudah dipahami.\n",
+    "  ```python\n",
+    "  # Jangan gunakan kode yang rumit jika bisa dibuat sederhana\n",
+    "  nama = input('Masukkan nama: ')\n",
+    "  print(f'Halo, {nama}!')\n",
+    "  ```"
+   ]
   }
  ],
  "metadata": {
